@startuml EER
!include https://raw.githubusercontent.com/fredoslav2004/MinimalThemePUML/refs/heads/main/minimal-theme.puml
scale 1
' ▶ ◀ ▲ ▼

skinparam ranksep 120
skinparam nodesep 120
skinparam ArrowFontSize 9

title Enhanced Entity-Relationship Diagram

together {
    class SystemUser
    class Role
}

class SystemUser
{
    id
    username
    password_hash
}

class Role
{
    role
}

class Course {
    id
    title
    description
    total_steps
}

class Language {
    code
    name
}

class LearningStep {
    step_order
    content
}

class LearningStepType{
    id
    name
}

class CourseCategory
{
    id
    name
    description
}

class UserCourseProgress {
    current_step
}

' Relationships

SystemUser "*" -- "*" Role : has ▶

Course "*" -- "1" CourseCategory : belongs to ▶
Course "*" -- "1" Language : is in ▶
Course "*" -- "1" SystemUser : created by ▼
Course "*" -- "1" SystemUser : approved by ▼

LearningStep "*" --* "1" Course : belongs to ▼
LearningStep "*" -- "1" LearningStepType : is of type ▼

SystemUser "1" o-- "*" UserCourseProgress : has progress ▶
Course "1" -- "*" UserCourseProgress : tracked in ▲

@enduml